Add analytics algorithm and some assets

--- a/app/views/shared/_home.html.erb
+++ b/app/views/shared/_home.html.erb
@@ -1,4 +1,5 @@
 <section>
+    <%= link_to 'Analytics', analytics_path %>
 <h1>Search engine</h1>
 <div id="articles-section">
   <%= render partial: '/shared/form' %>
