Add more styles and icons

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,4 @@
-<div id="articles-section">
+<section class='headline-section'>
+  <%= image_tag "search_icon.svg", height: 300 %>
   <%= render partial: '/shared/home', locals: { articles: @articles } %>
-</div>
+</section>
