--- a/app/views/shared/_home.html.erb
+++ b/app/views/shared/_home.html.erb
@@ -1,18 +1,18 @@
-<section>
-    <%= link_to 'Analytics', analytics_path %>
-<h1>Search engine</h1>
-<div id="articles-section">
+<div class='search'>
+  <%= link_to 'Analytics', analytics_path %>
+  <h1 class='search__heading'>HJ Search engine</h1>
+  <div id="articles-section">
   <%= render partial: '/shared/form' %>
-</div>
-<%= turbo_frame_tag "articles" do %>
-<% if articles.empty? %>
- <div></div>
-<% else %>
-  <% articles.each do |article| %>
+  </div>
+  <%= turbo_frame_tag "articles" do %>
+    <% if articles.empty? %>
+    <div></div>
+    <% else %>
+    <% articles.each do |article| %>
     <ul class="article">
       <li><%= article.title %></li>
     </ul>
+    <% end %>
+    <% end %>
   <% end %>
-<% end %>
-<% end %>
-</section>
+</div>
