--- a/app/assets/stylesheets/search-input.css
+++ b/app/assets/stylesheets/search-input.css
@@ -1,4 +1,36 @@
+.search {
+    width: 50%;
+    text-align: center;
+}
+
 .search__heading {
     font-size: 5rem;
     text-transform: capitalize;
+}
+
+.form-container {
+    margin: 1.5rem 0;
+}
+
+.form-container__input {
+    position: relative;
+    height: 5rem;
+    width: 100%;
+    border-radius: 2.5rem;
+    padding: 0 5rem;
+    border-color: var(--secondary-color);
+    outline: none;
+    box-shadow: none;
+    font-size: 1.8rem;
+}
+
+.form-container__input:focus {
+    box-shadow: 0.8rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+.form-container__input--icon {
+    position: absolute;
+    height: 2.7rem;
+    z-index: 11;
+    margin: 1rem;
 }
