Add the styles to the index page

--- a/app/assets/stylesheets/search-input.css
+++ b/app/assets/stylesheets/search-input.css
@@ -1,4 +1,5 @@
 .search {
+    position: relative;
     width: 50%;
     text-align: center;
 }
@@ -10,6 +11,7 @@
 
 .form-container {
     margin: 1.5rem 0;
+    position: relative;
 }
 
 .form-container__input {
@@ -25,12 +27,12 @@
 }
 
 .form-container__input:focus {
-    box-shadow: 0.8rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0rem 0.3rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 .form-container__input--icon {
     position: absolute;
-    height: 2.7rem;
+    height: 2.2rem;
     z-index: 11;
-    margin: 1rem;
+    margin: 1.4rem 1.5rem;
 }
