--- a/app/views/shared/_home.html.erb
+++ b/app/views/shared/_home.html.erb
@@ -1,18 +1,17 @@
 <div class='search'>
-  <%= link_to 'Analytics', analytics_path %>
   <h1 class='search__heading'>HJ Search engine</h1>
-  
+
   <%= render partial: '/shared/form' %>
 
   <%= turbo_frame_tag "articles" do %>
-    <% if articles.empty? %>
-    <div></div>
-    <% else %>
-    <% articles.each do |article| %>
-    <ul class="article">
-      <li><%= article.title %></li>
-    </ul>
-    <% end %>
+    <% if !articles.empty? %>
+      <div class='queries'>
+        <% articles.each do |article| %>
+          <ul class="queries__list">
+            <li class='queries__list--item'><%= image_tag "search_small.svg", class: 'icon-sm' %><%= article.title %></li>
+          </ul>
+        <% end %>
+      </div>
     <% end %>
   <% end %>
 </div>
