--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('analytics.css');
 @import url('index.css');
 
 :root {
@@ -36,3 +37,39 @@ ul {
     height: 1.3rem;
     padding: 0 1rem;
 }
+
+.analytics-section {
+    height: 100vh;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+.analytics-section__heading {
+    margin: 3rem 0;
+    font-size: 4rem;
+    text-transform: capitalize;
+}
+
+.table {
+    border-collapse: collapse;
+    width: 80%;
+    margin: 2rem 0;
+  }
+  
+  .table__data, .table__header {
+    border: 1px solid #000;
+    padding: 8px;
+  }
+
+  .table__header {
+    text-align: center;
+  }
+  
+  .table__row:nth-child(even) {
+    background-color: rgb(219, 219, 219);
+  }
+
+  .table__row:hover {
+    background-color: var(--color-grey);
+  }
