--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -1,6 +1,15 @@
-<div id="searches">
-  <h1> Top 100 Searches </h1>
-  <ul id="searches-list">
-    <%= render partial: 'search', locals: { searches: @grouped_searches } %>
-  </ul>
-</div>
+<section class='analytics-section'>
+  <h1 class='analytics-section__heading'> Analytics: popular searches </h1>
+  <table class='table'>
+  <tr class='table__row'>
+    <th class='table__header'>Company</th>
+    <th class='table__header'>Contact</th>
+    <th class='table__header'>Country</th>
+  </tr>
+  <tr class='table__row'>
+    <td class='table__data'>Alfreds Futterkiste</td>
+    <td class='table__data'>Maria Anders</td>
+    <td class='table__data'>Germany</td>
+  </tr>
+</table>
+</section>
