Add link to root in the analytics page

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <section class='headline-section'>
-  <span class='analytics-btn'><%= link_to 'Analytics -->', analytics_path, class: 'analytics-btn--link' %></span>
+  <span><%= link_to 'Analytics -->', analytics_path, class: 'btn--link right' %></span>
   <%= image_tag "search_icon.svg", height: 200 %>
   <%= render partial: '/shared/home', locals: { articles: @articles } %>
 </section>
