--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,6 +38,42 @@ ul {
     padding: 0 1rem;
 }
 
+.btn--link {
+    position: absolute;
+    top: 6%;
+    font-size: 2rem;
+    text-decoration: none;
+    color: var(--secondary-color);
+    overflow: hidden;
+    transition: all .4s;
+    backface-visibility: hidden;
+}
+
+.btn--link:hover {
+    transform: scale(1.2);
+}
+
+.btn--link:hover.btn--link::after {
+    transform: translateX(-30%);
+}
+
+.btn--link::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 5%;
+    background-color: var(--tertiary-color);
+    bottom: 0;
+    left: 0;
+    z-index: -11;
+    transform: translateX(-100%);
+    transition: all .4s;
+}
+
+.left {
+    left: 6%;
+}
+
 .analytics-section {
     height: 100vh;
     display: flex;
