--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -23,36 +23,6 @@
     padding: .5rem 0;
 }
 
-.analytics-btn--link {
-    position: absolute;
+.right {
     right: 5%;
-    top: 6%;
-    font-size: 2rem;
-    text-decoration: none;
-    color: var(--secondary-color);
-    overflow: hidden;
-    transition: all .4s;
-    backface-visibility: hidden;
-}
-
-.analytics-btn--link:hover {
-    transform: scale(1.2);
-}
-
-.analytics-btn--link:hover.analytics-btn--link::after {
-    transform: translateX(-30%);
-}
-
-.analytics-btn--link::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 5%;
-    background-color: var(--tertiary-color);
-    bottom: 0;
-    left: 0;
-    z-index: -11;
-    transform: translateX(-100%);
-    transition: all .4s;
-
 }
