--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -1,4 +1,5 @@
 <section class='analytics-section'>
+  <span><%= link_to '<--Back', root_path, class: 'btn--link left' %></span>
   <h1 class='analytics-section__heading'> Analytics: popular searches </h1>
   <table class='table'>
   <tr class='table__row'>
