--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <section class='headline-section'>
   <span><%= link_to 'Analytics -->', analytics_path, class: 'btn--link right' %></span>
-  <%= image_tag "search_icon.svg", height: 200 %>
+  <%= image_tag  "search_icon.svg", height: 200,class:'img' %>
   <%= render partial: '/shared/home', locals: { articles: @articles } %>
 </section>
