--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -21,6 +21,17 @@
 
 .queries__list--item {
     padding: .5rem 0;
+    cursor: pointer;
+}
+
+.queries__list--item:hover {
+    background-color: var(--color-grey);
+    border-left: 6px solid var(--secondary-color);
+}
+
+.link {
+    color: black;
+    text-decoration: none;
 }
 
 .right {
