--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -2,7 +2,7 @@
   <span><%= link_to '<--Back', root_path, class: 'btn--link left' %></span>
   <h1 class='analytics-section__heading'> Analytics: popular searches </h1>
   <table class='table'>
-  <tr class='table__row'>
+  <tr class='table__row table__row--heading'>
     <th class='table__header'>Query</th>
     <th class='table__header'>number of searches</th>
     <th class='table__header'>articles</th>
